--- a/wwwroot/betterSleep/en/better_sleep_pt2_test_en.html
+++ b/wwwroot/betterSleep/en/better_sleep_pt2_test_en.html
@@ -1138,7 +1138,9 @@
 											<p class="sTit">Based on your preferences, here is what we recommend</p>
 										</div>
 										<div class="prodList">
-											<div class="c130l69h xbcjakg mj54kgs l1twdhvz x1aacaiq s1vteuqm">
+											<div>
+												<div class="c130l69h xbcjakg mj54kgs l1twdhvz x1aacaiq s1vteuqm">
+												</div>
 											</div>
 										</div>
 									</div>
