--- a/wwwroot/posfeed/posfeed.html
+++ b/wwwroot/posfeed/posfeed.html
@@ -4,11 +4,12 @@
 <head>
 	<meta http-equiv="faq-cont-Type" faq-cont="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" faq-cont="IE=edge">
+	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
 
 	<title></title>
 
     <link rel="stylesheet" href="./assets/css/modules.css">
-    
+    <link rel="stylesheet" href="./assets/styles/modules.css">
 
     
 </head>
@@ -17,6 +18,10 @@
 
 	
 	<div class="category-wrap">
+		<div class="category-search">
+			<input type="text" placeholder="무엇을 도와드릴까요?" />
+			<button type="button" class="btn-search">검색</button>
+		</div>
 		<div class="category-list">
 			<ul>
 				<li class="active" data-active="전체">전체</li>
@@ -26,10 +31,6 @@
 				<li data-active="메뉴얼">메뉴얼</li>
 				<li data-active="모바일">모바일</li>
 			</ul>
-		</div>
-		<div class="category-search">
-			<input type="text" placeholder="무엇을 도와드릴까요?" />
-			<button type="button" class="btn-search">검색</button>
 		</div>
 	</div>
 
@@ -261,11 +262,9 @@
 			</li>
 			<li data-sort="서비스/콘텐츠">
 				<div class="faq-item">
-					<div class="faq-top">
-						<div class="faq-top"> 
-							<strong>서비스/콘텐츠</strong>
-							<div class="faq-qa">포스피드 아이콘이 사라졌어요</div>
-						</div>
+					<div class="faq-top"> 
+						<strong>서비스/콘텐츠</strong>
+						<div class="faq-qa">포스피드 아이콘이 사라졌어요</div>
 					</div>
 					<div class="faq-cont">
 						<div class="faq-aw">1. 바탕화면 마우스 우클릭,<br> 2. 보기 또는
@@ -292,7 +291,6 @@
 						<div class="faq-qa">여러대의 컴퓨터에서 사용 가능한가요?</div>
 					</div>
 					<div class="faq-cont">
-						<h3>여러대의 컴퓨터에서 사용 가능한가요?</h3>
 						<div class="faq-aw">포스피드 프로그램은 다중 로그인이 가능합니다.</div>
 					</div>
 				</div>
@@ -398,6 +396,7 @@
 			<!---->
 		</ul>
 	</div>
+
 
 
 
