--- a/wwwroot/posfeed/posfeed2.html
+++ b/wwwroot/posfeed/posfeed2.html
@@ -15,6 +15,13 @@
 		.header-pc-nav .pc-nav-list.w--current{
 			color: #4865dd;
 		}
+		.header-pc .header-pc-nav + a {
+			opacity: 0;
+			pointer-events: none;
+		}
+		.header-sub > a {
+			display: none;
+		}
 	</style>
     
 </head>
