--- a/wwwroot/posfeed/posfeed2.html
+++ b/wwwroot/posfeed/posfeed2.html
@@ -23,12 +23,26 @@
 			display: none;
 		}
 	</style>
+
+
+	<!—[if lte IE 8]>
+	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+	<![endif]—>
+	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+	<script>
+	hbspt.forms.create({
+		region: "na1",
+		portalId: "8300948",
+		formId: "80983deb-fd45-41c8-bf04-bf458ff0b304",
+		target: "#hs_custom_form",
+	});
+	</script>
     
 </head>
 
 <body>
 
-	
+	<div id="hs_custom_form"> </div>
 
 
 	<div class="slidewrap">
