[create] babel config

--- a/wwwroot/lets_play/en/lets_play_quizgame_en.html
+++ b/wwwroot/lets_play/en/lets_play_quizgame_en.html
@@ -19,13 +19,13 @@
 
 <div id="letsPlay2021" class="letsPlay2021 ikeaPage">
 	<div class="quizGame">
-		<div class="intro">
+		<div class="intro active">
 			<div class="characterArea"></div>
 			<div class="btnArea">
 				<a href="javascript:;" class="startBtn"></a>
 			</div>
 		</div>
-		<div class="step1 active">
+		<div class="step1">
 			<div class="contList"> <!-- active 시 동물 이미지 활성화 -->
 				<div class="questions active"> <!-- 활성화시 active 추가-->
 					<strong>Who am I?</strong>
