[create] init play games

--- a/wwwroot/lets_play/en/lets_play_quizgame_en.html
+++ b/wwwroot/lets_play/en/lets_play_quizgame_en.html
@@ -27,11 +27,11 @@
 		</div>
 		<div class="step1">
 			<div class="contList"> <!-- active 시 동물 이미지 활성화 -->
-				<div class="questions active"> <!-- 활성화시 active 추가-->
+				<div class="questions"> <!-- 활성화시 active 추가-->
 					<strong>Who am I?</strong>
 					<p>I am a prehistoric  bird that looks  goofy and tongue sticking out.</p>
 				</div>
-				<div class="chBtn character1"></div> <!-- 정답이 아닐 시 notAc 클래스 추가 -->
+				<div class="chBtn character1" data-character="1"></div> <!-- 정답이 아닐 시 notAc 클래스 추가 -->
 			</div>
 			<div class="contList">
 				<div class="questions">
@@ -68,7 +68,7 @@
 					<p>Please try again!</p>
 				</div>
 				<div class="characterSection">
-					<div class="character1 active"></div> <!-- 실패 캐릭터 노출시 active 추가-->
+					<div class="character1"></div> <!-- 실패 캐릭터 노출시 active 추가-->
 					<div class="character2"></div>
 					<div class="character3"></div>
 					<div class="character4"></div>
