[update] ikea slide

--- a/wwwroot/product_en/templet_index.html
+++ b/wwwroot/product_en/templet_index.html
@@ -757,26 +757,26 @@
 	</div>
 	<div class="slideCont">
 		<div class="slideCont">
-			<div class="swiper-container slide04">
+			<div class="swiper-container slide04 slide04_1">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_1"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_1"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_1"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_1"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_1"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 				</div>
@@ -793,26 +793,26 @@
 	</div>
 	<div class="slideCont">
 		<div class="slideCont">
-			<div class="swiper-container slide04">
+			<div class="swiper-container slide04 slide04_2">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_2"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_2"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_2"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_2"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="prodWrap"></div>
+						<div class="prodWrap prodWrap_2"></div>
 						<div class="bubble_review">리뷰 텍스트 글 표현 부분입니다.</div>
 					</div>
 				</div>
